--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -9,15 +9,14 @@
     <TableLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:stretchColumns="*"
         android:layout_marginTop="30dp">
         <TableRow
-            android:layout_gravity="center_vertical"
             android:layout_margin="15dp">
             <CalendarView
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:layout_gravity="center"
                 android:id="@+id/calenarView"/>
         </TableRow>
         <TableRow
@@ -30,10 +29,22 @@
                 android:text="알약 이름"
                 android:textSize="20dp"/>
             <ImageView
+                android:layout_marginLeft="30dp"
                 android:layout_width="0dp"
-                android:layout_weight="1"
+                android:layout_weight="0.2"
                 android:layout_height="30dp"
-                />
+                android:src="@drawable/pl"/>
+            <ImageView
+                android:layout_width="0dp"
+                android:layout_weight="0.2"
+                android:layout_height="30dp"
+                android:src="@drawable/pm"/>
+            <ImageView
+                android:layout_marginRight="30dp"
+                android:layout_width="0dp"
+                android:layout_weight="0.2"
+                android:layout_height="30dp"
+                android:src="@drawable/pr"/>
         </TableRow>
         <TableRow
             android:layout_margin="20dp">
@@ -44,14 +55,13 @@
                 android:layout_weight="1"
                 android:text="약 이름 버리세요!"
                 android:textSize="20dp"/>
-            <ImageButton
-                android:background="@color/white"
+
+            <ImageView
+                android:id="@+id/ImgBin"
                 android:layout_width="0dp"
                 android:layout_height="30dp"
                 android:layout_weight="1"
-                android:scaleType="fitCenter"
-                android:src="@drawable/bin"
-                android:id="@+id/ImgBin"/>
+                android:src="@drawable/bin"/>
         </TableRow>
 
     </TableLayout>
