--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -11,7 +11,7 @@
         android:layout_marginBottom="50dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="    약 정보 검색    "
+        android:text="    약 정보    "
         android:textSize="20dp"
         android:textColor="@color/black"
         android:padding="22dp"
@@ -20,7 +20,7 @@
         android:id="@+id/search_pharmacy"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="   약국 정보 검색   "
+        android:text="   약국 정보   "
         android:textSize="20dp"
         android:textColor="@color/black"
         android:padding="20dp"
