--- a/app/src/main/res/layout/fragment_ebox.xml
+++ b/app/src/main/res/layout/fragment_ebox.xml
@@ -11,4 +11,15 @@
         android:text="ebox"/>
 
 
+    <Button
+        android:id="@+id/addbtn"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:text="+"
+        android:textSize="30dp"
+        android:background="@drawable/circle"
+        android:layout_gravity="bottom|end"
+        android:layout_marginBottom="20dp"
+        android:layout_marginRight="10dp"/>
+
 </FrameLayout>
