--- a/app/src/main/res/layout/fragment_plist.xml
+++ b/app/src/main/res/layout/fragment_plist.xml
@@ -1,13 +1,38 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Fragment.PlistFragment">
+    android:padding="10dp"
+    android:id="@+id/topLayout">
 
     <TextView
+        android:id="@+id/txtPlist"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:text="복용약 리스트"
+        android:textSize="20dp"
+        android:textStyle="bold" />
+    <ListView
+        android:layout_below="@+id/img"
+        android:id="@+id/lvPlist"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="plist" />
+        android:layout_height="wrap_content"/>
 
-</FrameLayout>
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:clickable="true"
+        android:id="@+id/fabAdd"
+        android:layout_marginRight="10dp"
+        android:layout_marginBottom="10dp"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentBottom="true"
+        android:src="@drawable/add"/>
+
+
+
+</RelativeLayout>
+
+
