--- a/app/src/main/res/layout/fragment_ebox.xml
+++ b/app/src/main/res/layout/fragment_ebox.xml
@@ -5,10 +5,10 @@
     android:layout_height="match_parent"
     tools:context=".Fragment.EboxFragment">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="ebox"/>
+    <ListView
+        android:id="@+id/listView_custom"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"></ListView>
 
 
     <Button
