--- a/app/src/main/res/layout/fragment_plist.xml
+++ b/app/src/main/res/layout/fragment_plist.xml
@@ -3,8 +3,7 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="10dp"
-    android:id="@+id/fragmentPlist">
+    android:padding="10dp">
 
     <TextView
         android:id="@+id/txtPlist"
