--- a/app/src/main/res/layout/activity_plist.xml
+++ b/app/src/main/res/layout/activity_plist.xml
@@ -12,6 +12,7 @@
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:padding="10dp">
+
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -19,12 +20,13 @@
 
             <TextView
                 android:id="@+id/plistTextPicture"
-                android:layout_alignParentTop="true"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textSize="20sp"
-                android:text="사진을 찍으세요"
-                android:layout_marginLeft="10dp"/>
+                android:layout_alignParentTop="true"
+                android:layout_marginLeft="10dp"
+                android:layout_marginTop="10dp"
+                android:text="사진을 추가하세요"
+                android:textSize="20sp" />
 
             <ImageButton
                 android:id="@+id/plistBtnPicture"
@@ -40,140 +42,215 @@
                 android:background="@android:color/transparent"
                 android:contentDescription="사진"
                 android:scaleType="fitXY"
-                android:src="@drawable/camera" />
+                android:src="@drawable/came" />
+
             <TextView
                 android:id="@+id/plistTextName"
-                android:layout_below="@+id/plistBtnPicture"
-                android:layout_marginLeft="10dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_below="@+id/plistBtnPicture"
+                android:layout_marginLeft="10dp"
+                android:layout_marginTop="20dp"
                 android:text="약 이름"
-                android:textSize="20sp"/>
+                android:textSize="20sp" />
 
             <EditText
-                android:hint="약 이름을 적어주세요"
-                android:textSize="20sp"
                 android:id="@+id/plistEdtName"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/plistTextName"
                 android:layout_marginLeft="10dp"
-                android:layout_marginRight="10dp"/>
+                android:layout_marginTop="10dp"
+                android:layout_marginRight="10dp"
+                android:hint="약 이름을 입력하세요"
+                android:textSize="20sp" />
+
             <TextView
                 android:id="@+id/plistTextDay"
-                android:layout_below="@+id/plistEdtName"
-                android:layout_marginLeft="10dp"
-                android:layout_marginTop="10dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_below="@+id/plistEdtName"
+                android:layout_marginLeft="10dp"
+                android:layout_marginTop="20dp"
                 android:text="복용요일"
-                android:textSize="20sp"/>
+                android:textSize="20sp" />
 
             <TableLayout
                 android:id="@+id/plistTableDay"
-                android:layout_below="@+id/plistTextDay"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:weightSum="7"
-                android:layout_margin="10dp">
+                android:layout_below="@+id/plistTextDay"
+                android:layout_margin="10dp"
+                android:weightSum="7">
+
                 <TableRow>
+
                     <Button
-                        android:background="@drawable/confirm_btn"
                         android:id="@+id/plistBtnMon"
-                        android:text="월"
-                        android:layout_weight="1"/>
-                    <Button
+                        android:layout_weight="1"
                         android:background="@drawable/confirm_btn"
+                        android:text="월" />
+
+                    <Button
                         android:id="@+id/plistBtnTue"
-                        android:text="화"
                         android:layout_marginLeft="3dp"
-                        android:layout_weight="1"/>
-                    <Button
+                        android:layout_weight="1"
                         android:background="@drawable/confirm_btn"
+                        android:text="화" />
+
+                    <Button
                         android:id="@+id/plistBtnWed"
-                        android:text="수"
                         android:layout_marginLeft="3dp"
-                        android:layout_weight="1"/>
-                    <Button
+                        android:layout_weight="1"
                         android:background="@drawable/confirm_btn"
+                        android:text="수" />
+
+                    <Button
                         android:id="@+id/plistBtnThu"
-                        android:text="목"
                         android:layout_marginLeft="3dp"
-                        android:layout_weight="1"/>
-                    <Button
+                        android:layout_weight="1"
                         android:background="@drawable/confirm_btn"
+                        android:text="목" />
+
+                    <Button
                         android:id="@+id/plistBtnFri"
-                        android:text="금"
                         android:layout_marginLeft="3dp"
-                        android:layout_weight="1"/>
-                    <Button
+                        android:layout_weight="1"
                         android:background="@drawable/confirm_btn"
+                        android:text="금" />
+
+                    <Button
                         android:id="@+id/plistBtnSat"
-                        android:text="토"
                         android:layout_marginLeft="3dp"
-                        android:layout_weight="1"/>
-                    <Button
+                        android:layout_weight="1"
                         android:background="@drawable/confirm_btn"
+                        android:text="토" />
+
+                    <Button
                         android:id="@+id/plistBtnSun"
-                        android:text="일"
                         android:layout_marginLeft="3dp"
-                        android:layout_weight="1"/>
+                        android:layout_weight="1"
+                        android:background="@drawable/confirm_btn"
+                        android:text="일" />
                 </TableRow>
             </TableLayout>
+
             <LinearLayout
                 android:id="@+id/plistLinear"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/plistTableDay"
                 android:layout_marginLeft="10dp"
+                android:layout_marginTop="10dp"
                 android:layout_marginRight="10dp">
+
                 <TextView
                     android:id="@+id/plistTextTime"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="하루에 몇 번 복용하세요?"
-                    android:textSize="20sp"/>
+                    android:textSize="20sp" />
+
                 <Button
+
                     android:id="@+id/plistBtnTime"
-                    android:layout_marginLeft="10dp"
-                    android:text="1"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"/>
-                <Button
-                    android:id="@+id/plistBtnTimeOk"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="확인"/>
+                    android:layout_marginLeft="10dp"
+                    android:backgroundTint="#00ff0000"
+                    android:text="1"
+                    android:textSize="15sp"
+                    android:textStyle="bold" />
             </LinearLayout>
 
-            <ListView
-                android:id="@+id/plistListTime"
+            <LinearLayout
+                android:id="@+id/plistLinear2"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/plistLinear"
-                android:layout_marginLeft="10dp"
-                android:layout_marginRight="10dp"/>
-            <TextView
-                android:id="@+id/plistTextMemo"
-                android:layout_below="@+id/plistListTime"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="메모"
-                android:layout_marginTop="10dp"
+                android:layout_below="@id/plistLinear"
                 android:layout_marginLeft="10dp"
                 android:layout_marginRight="10dp"
-                android:textSize="20sp"/>
+                android:gravity="center"
+                android:orientation="vertical"
+                android:weightSum="6">
+
+                <Button
+                    android:id="@+id/btnTime1"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:backgroundTint="#00ff0000"
+                    android:text="복용 시간 1"
+                    android:visibility="visible" />
+
+                <Button
+                    android:id="@+id/btnTime2"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:backgroundTint="#00ff0000"
+                    android:text="복용 시간 2"
+                    android:visibility="gone" />
+
+                <Button
+                    android:id="@+id/btnTime3"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:backgroundTint="#00ff0000"
+                    android:text="복용 시간 3"
+                    android:visibility="gone" />
+
+                <Button
+                    android:id="@+id/btnTime4"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:backgroundTint="#00ff0000"
+                    android:text="복용 시간 4"
+                    android:visibility="gone" />
+
+                <Button
+                    android:id="@+id/btnTime5"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:backgroundTint="#00ff0000"
+                    android:text="복용 시간 5"
+                    android:visibility="gone" />
+
+                <Button
+                    android:id="@+id/btnTime6"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:backgroundTint="#00ff0000"
+                    android:text="복용 시간 6"
+                    android:visibility="gone" />
+            </LinearLayout>
+
+            <TextView
+                android:id="@+id/plistTextMemo"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/plistLinear2"
+                android:layout_marginLeft="10dp"
+                android:layout_marginTop="20dp"
+                android:layout_marginRight="10dp"
+                android:text="메모"
+                android:textSize="20sp" />
 
             <EditText
-                android:hint="메모를 적어보세요"
                 android:id="@+id/plistEdtRealMemo"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/plistTextMemo"
                 android:layout_marginLeft="10dp"
+                android:layout_marginTop="10dp"
                 android:layout_marginRight="10dp"
-                android:lines="4"
-                android:textSize="20sp"/>
+                android:lines="3"
+                android:hint="메모를 적어보세요"
+                android:textSize="20sp" />
         </RelativeLayout>
 
     </ScrollView>
@@ -181,6 +258,7 @@
         android:layout_alignParentBottom="true"
         android:id="@+id/plistBtnSave"
         android:layout_width="match_parent"
+        android:background="#b5d692"
         android:layout_height="wrap_content"
         android:text="저장"/>
 </RelativeLayout>
