--- a/app/src/main/res/layout/eboxlistview_item.xml
+++ b/app/src/main/res/layout/eboxlistview_item.xml
@@ -1,11 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:id="@+id/cmdarea"
+    android:padding="10dp">
 
     <ImageView
-        android:layout_width="150dp"
-        android:layout_height="150dp"
+        android:layout_width="125dp"
+        android:layout_height="125dp"
         android:id="@+id/imageView1"
         android:layout_weight="1" />
 
