--- a/app/src/main/res/layout/listview_plist.xml
+++ b/app/src/main/res/layout/listview_plist.xml
@@ -12,75 +12,130 @@
         android:id="@+id/plistLvImg"
         android:layout_weight="1"
         android:layout_width="0dp"
-        android:layout_height="100dp"
+        android:layout_height="125dp"
         android:src="@drawable/ic_launcher_background"/>
-    <TextView
-        android:id="@+id/plistLvtName"
-        android:layout_weight="1"
-        android:layout_width="0dp"
-        android:layout_height="match_parent"
-        android:textStyle="bold"
-        android:gravity="center"
-        android:text="약 이름" />
-
     <LinearLayout
+        android:orientation="vertical"
+        android:padding="6dp"
+        android:layout_weight="4"
         android:layout_width="0dp"
-        android:layout_height="match_parent"
-        android:layout_weight="3">
-        <Button
-            android:visibility="gone"
-            android:textSize="10dp"
-            android:id="@+id/plistLvTime1"
-            android:layout_weight="1"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:background="@drawable/pill1"
-            android:scaleType="fitXY" />
-        <Button
+        android:layout_height="wrap_content">
+            <TextView
+                android:textSize="20dp"
+                android:layout_marginTop="5dp"
+                android:layout_marginBottom="10dp"
+                android:id="@+id/plistLvtName"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textStyle="bold"
+                android:layout_gravity="start"
+                android:text="약 이름" />
+            <LinearLayout
+                android:id="@+id/linear"
+                android:layout_width="match_parent"
+                android:layout_marginTop="5dp"
+                android:gravity="center"
+                android:layout_height="match_parent"
+                android:weightSum="3"
+                android:layout_centerHorizontal="true"
+                android:orientation="vertical">
+                <LinearLayout
+                    android:id="@+id/plLinear2"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:weightSum="3"
+                    android:layout_marginBottom="1dp">
+                    <Button
+                        android:layout_marginRight="1dp"
+                        android:layout_marginLeft="10dp"
+                        android:textStyle="bold"
+                        android:visibility="gone"
+                        android:textSize="10dp"
+                        android:id="@+id/plistLvTime1"
+                        android:layout_weight="1"
+                        android:layout_width="0dp"
+                        android:layout_height="40dp"
+                        android:background="@drawable/pill"
+                        android:scaleType="fitXY" />
+                    <Button
+                        android:layout_marginRight="1dp"
+                        android:textStyle="bold"
+                        android:visibility="gone"
+                        android:textSize="10dp"
+                        android:id="@+id/plistLvTime2"
+                        android:layout_weight="1"
+                        android:layout_width="0dp"
+                        android:background="@drawable/pill"
+                        android:layout_height="40dp"
+                        android:scaleType="fitXY" />
+                    <Button
+                        android:layout_marginRight="10dp"
+                        android:textStyle="bold"
+                        android:visibility="gone"
+                        android:textSize="10dp"
+                        android:id="@+id/plistLvTime3"
+                        android:layout_weight="1"
+                        android:layout_width="0dp"
+                        android:layout_height="40dp"
+                        android:background="@drawable/pill"
+                        android:scaleType="fitXY"/>
+                </LinearLayout>
+                <LinearLayout
+                    android:id="@+id/plLinear3"
+                    android:layout_below="@+id/plLinear2"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:weightSum="3">
+                    <Button
+                        android:layout_marginRight="1dp"
+                        android:layout_marginLeft="10dp"
+                        android:textStyle="bold"
+                        android:visibility="gone"
+                        android:textSize="10dp"
+                        android:id="@+id/plistLvTime4"
+                        android:layout_weight="1"
+                        android:layout_width="0dp"
+                        android:layout_height="40dp"
+                        android:background="@drawable/pill"
+                        android:scaleType="fitXY"/>
+                    <Button
+                        android:layout_marginRight="1dp"
+                        android:textStyle="bold"
+                        android:visibility="gone"
+                        android:textSize="10dp"
+                        android:id="@+id/plistLvTime5"
+                        android:layout_weight="1"
+                        android:layout_width="0dp"
+                        android:layout_height="40dp"
+                        android:background="@drawable/pill"
+                        android:scaleType="fitXY"/>
+                    <Button
+                        android:layout_marginRight="10dp"
+                        android:textStyle="bold"
+                        android:visibility="gone"
+                        android:textSize="10dp"
+                        android:id="@+id/plistLvTime6"
+                        android:layout_weight="1"
+                        android:layout_width="0dp"
+                        android:layout_height="40dp"
+                        android:background="@drawable/pill"
+                        android:scaleType="fitXY"/>
+                </LinearLayout>
+
+            </LinearLayout>
+        <TextView
             android:visibility="visible"
-            android:textSize="10dp"
-            android:id="@+id/plistLvTime2"
-            android:layout_weight="1"
-            android:layout_width="0dp"
-            android:background="@drawable/pill2"
+            android:layout_marginTop="5dp"
+            android:id="@+id/plistLvtDay"
+            android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:scaleType="fitXY" />
-        <Button
-            android:visibility="gone"
-            android:textSize="10dp"
-            android:id="@+id/plistLvTime3"
-            android:layout_weight="1"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:background="@drawable/pill2"
-            android:scaleType="fitXY"/>
-        <Button
-            android:visibility="gone"
-            android:textSize="10dp"
-            android:id="@+id/plistLvTime4"
-            android:layout_weight="1"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:background="@drawable/pill2"
-            android:scaleType="fitXY"/>
-        <Button
-            android:visibility="gone"
-            android:textSize="10dp"
-            android:id="@+id/plistLvTime5"
-            android:layout_weight="1"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:background="@drawable/pill2"
-            android:scaleType="fitXY"/>
-        <Button
-            android:visibility="gone"
-            android:textSize="10dp"
-            android:id="@+id/plistLvTime6"
-            android:layout_weight="1"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:background="@drawable/pill3"
-            android:scaleType="fitXY"/>
+            android:textStyle="bold"
+            android:textSize="15sp"
+            android:textColor="#b5d692"
+            android:layout_gravity="center"
+            android:text="복용 요일이 아닙니다" />
     </LinearLayout>
+
+
 
 </LinearLayout>
