--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -4,14 +4,25 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:gravity="center"
     tools:context=".Fragment.SearchFragment">
-
-
     <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="search" />
-
-
-
+        android:id="@+id/search_pill"
+        android:layout_marginBottom="50dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="    약 정보    "
+        android:textSize="20dp"
+        android:textColor="@color/black"
+        android:padding="22dp"
+        android:background="@drawable/s_custom_button"/>
+    <TextView
+        android:id="@+id/search_drugstore"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="   약국 정보   "
+        android:textSize="20dp"
+        android:textColor="@color/black"
+        android:padding="20dp"
+        android:background="@drawable/s_custom_button"/>
 </LinearLayout>
