--- a/app/src/main/res/layout/activity_ds_search.xml
+++ b/app/src/main/res/layout/activity_ds_search.xml
@@ -10,16 +10,25 @@
     <fragment
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="9"
+        android:layout_weight="10"
         android:id="@+id/map"
         tools:context=".DsSearch"
         android:name="com.google.android.gms.maps.SupportMapFragment"/>
-    <Button
-        android:layout_width="wrap_content"
+    <RelativeLayout
+        android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="1"
-        android:text="약국 검색"
-        android:id="@+id/mBtnSearch"/>
-
-
+        android:layout_weight="1">
+        <Button
+            android:layout_alignParentLeft="true"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:text="약국 검색"
+            android:id="@+id/mBtnSearch"/>
+        <Button
+            android:layout_alignParentRight="true"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:text="내 위치로"
+            android:id="@+id/mBtnMyLocation"/>
+    </RelativeLayout>
 </LinearLayout>
