--- a/app/src/main/res/drawable-v24/circle.xml
+++ b/app/src/main/res/drawable-v24/circle.xml
@@ -2,7 +2,8 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="oval"
     >
-    <solid android:color="#ced4da"/>
+    <solid android:color="#b5d692"/>
+
     <stroke
         android:width="1dp"
         android:color="@color/white"/>
