--- a/app/src/main/res/layout/activity_ds_search.xml
+++ b/app/src/main/res/layout/activity_ds_search.xml
@@ -1,19 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".DsSearch">
+    xmlns:tools="http://schemas.android.com/tools"
+    android:orientation="vertical"
+    tools:context=".DsSearch"
+    android:id="@+id/mLayout">
 
-    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:map="http://schemas.android.com/apk/res-auto"
-        android:id="@+id/map"
+    <fragment
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:name="com.google.android.gms.maps.MapFragment"
-        map:cameraTargetLat="37.541"
-        map:cameraTargetLng="126.986"
-        map:cameraZoom="10"/>
-
+        android:layout_height="0dp"
+        android:layout_weight="10"
+        android:id="@+id/map"
+        tools:context=".DsSearch"
+        android:name="com.google.android.gms.maps.SupportMapFragment"/>
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1">
+        <Button
+            android:layout_alignParentLeft="true"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:text="약국 검색"
+            android:id="@+id/mBtnSearch"/>
+        <Button
+            android:layout_alignParentRight="true"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:text="내 위치로"
+            android:id="@+id/mBtnMyLocation"/>
+    </RelativeLayout>
 </LinearLayout>
