--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -4,70 +4,48 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:background="@color/white"
     tools:context=".Fragment.HomeFragment">
-
     <CalendarView
-         android:id="@+id/calendarView"
-         android:layout_height="wrap_content"
-         android:layout_width="wrap_content"
-        android:layout_gravity="center_horizontal"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
         android:layout_marginTop="40dp"/>
-    <TableLayout
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:layout_marginLeft="45dp">
-        <TableRow>
+        android:padding="10dp">
         <TextView
-            android:id="@+id/drugName"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:text="알약 이름"
-            android:textSize="20dp" />
-            <FrameLayout
-                android:id="@+id/drugTime">
-            <ImageView
-                android:id="@+id/pl"
-                android:layout_width="25dp"
-                android:layout_height="25dp"
-                android:layout_marginLeft="170dp"
-                android:src="@drawable/pill1"/>
-            <ImageView
-                android:id="@+id/pm"
-                android:layout_width="25dp"
-                android:layout_height="25dp"
-                android:layout_marginLeft="191dp"
-                android:src="@drawable/pill2"/>
-            <ImageView
-                android:id="@+id/pr"
-                android:layout_width="25dp"
-                android:layout_height="25dp"
-                android:layout_marginLeft="212dp"
-                android:src="@drawable/pill3"/>
-            </FrameLayout>
-        </TableRow>
-
-    </TableLayout>
-    <TableLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:layout_marginLeft="45dp">
-        <TableRow>
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="약 이름 버리세요!"
-            android:textSize="20dp"
-            android:layout_marginRight="128dp"/>
+            android:layout_weight="1"
+            android:text="약이름"
+            android:gravity="center"
+            android:textSize="20dp"/>
         <ImageView
-            android:id="@+id/ImgBin"
-            android:layout_width="25dp"
-            android:layout_height="25dp"
+            android:id="@+id/drugTime"
+            android:layout_width="0dp"
+            android:layout_height="20dp"
+            android:layout_weight="1"
+            android:src="@drawable/pill"/>
+    </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:padding="10dp">
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="약이름 버려주세요"
+            android:gravity="center"
+            android:textSize="20dp"/>
+        <ImageView
+            android:id="@+id/imgBin"
+            android:layout_width="0dp"
+            android:layout_height="20dp"
+            android:layout_weight="1"
             android:src="@drawable/bin"/>
-        </TableRow>
-    </TableLayout>
+    </LinearLayout>
 
 
 </LinearLayout>
