복원_db연결문제

--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -4,17 +4,18 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:layout_marginTop="10dp"
+    android:gravity="center_vertical"
     tools:context=".Fragment.HomeFragment">
 
     <com.prolificinteractive.materialcalendarview.MaterialCalendarView
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:id="@+id/calendarView"
         android:background="@drawable/background"
-        android:gravity="center"
+        android:layout_gravity="center"
         android:layout_marginLeft="40dp"
         android:layout_marginRight="40dp"
         android:layout_marginTop="40dp"
+        android:layout_marginBottom="40dp"
         android:padding="2dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -22,12 +23,37 @@
         app:mcv_selectionColor="#b5d692"/>
 
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="331dp"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="20dp"
-        android:background="@drawable/background"
-        android:padding="10dp">
+        android:layout_marginBottom="40dp"
+        android:paddingHorizontal="15dp"
+        android:paddingVertical="10dp">
+
+        <TextView
+            android:id="@+id/PName"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="2"
+            android:text="약이름"
+            android:textSize="20dp" />
+
+        <ImageView
+            android:id="@+id/drugTime"
+            android:layout_width="1dp"
+            android:layout_height="25dp"
+            android:layout_weight="1"
+            android:src="@drawable/pill" />
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="331dp"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:paddingHorizontal="15dp"
+        android:paddingVertical="10dp">
 
         <TextView
             android:id="@+id/Ename"
@@ -37,41 +63,18 @@
             android:text="약이름"
             android:textSize="20dp" />
 
-        <ImageView
-            android:id="@+id/drugTime"
-            android:layout_width="0dp"
-            android:layout_height="25dp"
-            android:layout_weight="1"
-            android:gravity="center"
-            android:src="@drawable/pill" />
-    </LinearLayout>
-    <LinearLayout
-        android:background="@drawable/background"
-        android:weightSum="3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginTop="20dp"
-        android:padding="10dp">
-        <TextView
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="약이름"
-            android:textSize="20dp"/>
         <TextView
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="버려주세요"
-            android:textSize="20dp"/>
+            android:textSize="20dp" />
+
         <ImageView
             android:id="@+id/imgBin"
             android:layout_width="0dp"
             android:layout_height="25dp"
             android:layout_weight="1"
-            android:src="@drawable/bin"/>
+            android:src="@drawable/bin" />
     </LinearLayout>
-
-
 </LinearLayout>
