--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -15,7 +15,7 @@
         android:textSize="20dp"
         android:textColor="@color/black"
         android:padding="22dp"
-        android:background="@drawable/s_custom_button"/>
+        android:background="@drawable/background"/>
     <TextView
         android:id="@+id/search_drugstore"
         android:layout_width="wrap_content"
@@ -24,5 +24,5 @@
         android:textSize="20dp"
         android:textColor="@color/black"
         android:padding="20dp"
-        android:background="@drawable/s_custom_button"/>
+        android:background="@drawable/background"/>
 </LinearLayout>
