--- a/app/src/main/res/layout/fragment_ebox.xml
+++ b/app/src/main/res/layout/fragment_ebox.xml
@@ -9,7 +9,8 @@
     <ListView
         android:id="@+id/listView_custom"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"></ListView>
+        android:layout_height="wrap_content">
+    </ListView>
 
 
     <Button
